# DL-Project-NLP-Political-Speeches

./: .gitignore  README.md  pyproject.toml  requirements.txt  train_models.py
notebooks/: inference_results.ipynb
outputs/roberta_trump/: metrics.json
src/DL_Project_NLP_Political_Speeches.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: dataloader.py
src/dl_project_nlp_political_speeches/: __init__.py
src/models/: __init__.py  model.py
