[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DL-Project-NLP-Political-Speeches"
version = "0.1.0"
description = "A  deep learning project for DSCI 410/510 about classifying political speeches"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "pandas",
    "ipykernel",
    "transformers",
    "matplotlib",
    "numpy",
    "scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
